# certificate-minter

./: README.md  contract.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
smart_contracts/artifacts/certificate_minter/: certificate_minter_client.ts
src/: App.tsx
src/components/: AdminDashboard.tsx  CertificateForm.tsx  ErrorBoundary.tsx  Header.tsx  MintedCertificates.tsx  TransferDialog.tsx  WalletConnection.tsx
src/hooks/: useWallet.ts
src/types/: certificate.ts
src/utils/: algorand.ts
