[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certificate-minter"
version = "1.0.0"
description = "Algorand smart contract for issuing NFT certificates"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    "algopy>=1.0.0",
    "algokit-utils>=2.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true